gitea/full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-mysql
  namespace: gitea
  labels:
    app: gitea-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-mysql
  template:
    metadata:
      labels:
        app: gitea-mysql
    spec:
      dnsPolicy: Default #so the pod is using the same DNS server as your node which is convenient
      containers:
      - name: gitea-mysql
        image: mysql:5.7
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql
          - name: mysql-init
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: gitea-mysql-pvc
        - name: mysql-init
          configMap:
            name: gitea-mysql-init

---
apiVersion: v1
kind: Service
metadata:
  name: gitea-mysql
  namespace: gitea
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: gitea-mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      dnsPolicy: Default
      containers:
      - name: gitea
        image: gitea/gitea:1.21.0
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gitea-data
          mountPath: /data
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 222
      targetPort: 22
  selector:
    app: gitea
